--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <title>INFO2180 - Lab 6</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="app.js">
     </script>
   </head>
   <body>
     <h1>Avengers Character Search</h1>
+    <input id="searchbar" type="text" placeholder="eg. Iron Man or Tony Stark" />
     <button type="button" id="search">Search</button>
+
+    <div id="results"></div>
   </body>
 </html>
